<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.signUp.SignUpFragment">

    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/login_sign_up_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name_ediTtext"
            style="@style/edit_text_style"
            android:drawableStart="@drawable/ic_account_box_black_24dp"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.524" />

        <EditText
            android:id="@+id/email_ediTtext"
            style="@style/edit_text_style"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/name_ediTtext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/name_ediTtext"
            app:layout_constraintTop_toBottomOf="@+id/name_ediTtext" />

        <EditText
            android:id="@+id/password_editText"
            style="@style/edit_text_style"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_security_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/email_ediTtext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_ediTtext"
            app:layout_constraintTop_toBottomOf="@+id/email_ediTtext" />

        <Button
            android:id="@+id/sign_up_button"
            android:text="@string/sign_up"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="@+id/password_editText"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/password_editText"
            app:layout_constraintTop_toBottomOf="@+id/password_editText"
            style="@style/submit_button_style"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>