<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.wordEdit.WordEditFragment">
    <data>
        <variable
            name="viewModel"
            type="com.example.worddefine.screens.wordEdit.WordEditViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/name_edit_text"
                    style="@style/edit_text_style"
                    android:layout_marginTop="32dp"
                    android:drawableStart="@drawable/ic_subtitles_black_24dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/definition_edit_text"
                    style="@style/edit_text_style"
                    android:layout_marginTop="24dp"
                    android:drawableStart="@drawable/ic_subtitles_black_24dp"
                    android:hint="@string/definition_text"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

                <EditText
                    android:id="@+id/examples_edit_text"
                    style="@style/edit_text_style"
                    android:layout_marginTop="24dp"
                    android:drawableStart="@drawable/ic_subtitles_black_24dp"
                    android:hint="@string/examples_text"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/definition_edit_text" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/word_vertical_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="185dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/word_horizontal_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="246dp" />


                <TextView
                    android:id="@+id/word_language_text"
                    style="@style/word_list_subject_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    app:layout_constraintBottom_toBottomOf="@+id/word_language_spinner"
                    app:layout_constraintEnd_toStartOf="@id/word_vertical_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/word_language_spinner" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/word_language_spinner"
                    style="@style/text_view_white_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:spinnerMode="dropdown"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/word_vertical_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/examples_edit_text" />


                <EditText
                    android:id="@+id/password_edit_text"
                    style="@style/edit_text_style"
                    android:layout_marginTop="24dp"
                    android:drawableStart="@drawable/ic_subtitles_black_24dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/word_language_text" />

                <Button
                    android:id="@+id/word_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/examples_edit_text"
                    app:layout_constraintVertical_bias="0.647" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
