<?xml version="1.0" encoding="utf-8"?>
<layout
    tools:context=".screens.wordListPassword.WordListPasswordFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.worddefine.screens.wordListPassword.WordListPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/password_edit_text"
            style="@style/edit_text_style"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_security_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.426" />

        <TextView
            android:id="@+id/enter_word_list_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/please_enter_password_of_this_word_list"
            android:fontFamily="@font/font_my_custom"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/password_edit_text"
            app:layout_constraintHorizontal_bias="0.468"
            app:layout_constraintStart_toStartOf="@id/password_edit_text"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text" />


        <Button
            android:id="@+id/set_password_button"
            style="@style/submit_button_style"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/font_my_custom"
            android:text="@string/confirm"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/password_edit_text"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@id/password_edit_text"
            app:layout_constraintTop_toBottomOf="@id/enter_word_list_password_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>