<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.wordListEdit.WordListEditFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.worddefine.screens.wordListEdit.WordListEditViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/word_list_edit_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="230dp" />


                <EditText
                    android:id="@+id/word_list_title_edit_text"
                    style="@style/edit_word_list_text_style"
                    android:layout_marginStart="64dp"
                    android:layout_marginEnd="64dp"
                    android:drawableStart="@drawable/ic_subtitles_black_24dp"
                    android:ems="12"
                    android:hint="@string/title"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline3" />


                <TextView
                    style="@style/word_list_subject_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visible"
                    app:layout_constraintBottom_toBottomOf="@+id/word_list_visible_filter_spinner"
                    app:layout_constraintEnd_toStartOf="@id/word_list_edit_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/word_list_visible_filter_spinner" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/word_list_visible_filter_spinner"
                    style="@style/text_view_white_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:spinnerMode="dropdown"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/word_list_edit_guideline"
                    app:layout_constraintTop_toBottomOf="@id/word_list_title_edit_text" />


                <TextView
                    style="@style/word_list_subject_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/add_word_by"
                    app:layout_constraintBottom_toBottomOf="@+id/word_list_add_word_by_filter_spinner"
                    app:layout_constraintEnd_toStartOf="@id/word_list_edit_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/word_list_add_word_by_filter_spinner" />


                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/word_list_add_word_by_filter_spinner"
                    style="@style/text_view_white_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:spinnerMode="dropdown"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/word_list_edit_guideline"
                    app:layout_constraintTop_toTopOf="@id/word_list_visible_filter_spinner" />


                <EditText
                    android:id="@+id/word_list_password_edit_text"
                    style="@style/edit_word_list_text_style"
                    android:visibility="invisible"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="64dp"
                    android:drawableStart="@drawable/ic_subtitles_black_24dp"
                    android:ems="12"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/word_list_add_word_by_filter_spinner" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="128dp" />

                <Button
                    android:id="@+id/word_list_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/add"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/word_list_password_edit_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
